; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vv/extr_vv-tl-parse.c_tl_update_next_binlog_wait_time.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vv/extr_vv-tl-parse.c_tl_update_next_binlog_wait_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }

@binlog_wait_time_tree = common dso_local global i32 0, align 4
@next_binlog_wait_time = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tl_update_next_binlog_wait_time() #0 {
  %1 = alloca %struct.TYPE_5__*, align 8
  %2 = load i32, i32* @binlog_wait_time_tree, align 4
  %3 = call %struct.TYPE_5__* @tree_get_min_binlog_wait(i32 %2)
  store %struct.TYPE_5__* %3, %struct.TYPE_5__** %1, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %5 = icmp ne %struct.TYPE_5__* %4, null
  br i1 %5, label %6, label %13

6:                                                ; preds = %0
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %1, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = sext i32 %11 to i64
  br label %14

13:                                               ; preds = %0
  br label %14

14:                                               ; preds = %13, %6
  %15 = phi i64 [ %12, %6 ], [ 9223372036854775807, %13 ]
  %16 = trunc i64 %15 to i32
  store i32 %16, i32* @next_binlog_wait_time, align 4
  ret void
}

declare dso_local %struct.TYPE_5__* @tree_get_min_binlog_wait(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
